# QDictionary

./: CMakeLists.txt  ChangeLog  qdictionary.pro
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  dictionary.cpp  dictionary.h  dictionarydialog.cpp  dictionarydialog.h  dictionarydialog.ui  dictionarymanager.cpp  dictionarymanager.h  dictionarymodel.cpp  dictionarymodel.h  dictionaryreader.cpp  dictionaryreader.h  dictionarytree.cpp  dictionarytree.h  dictionarytreewidget.cpp  dictionarytreewidget.h  dictionarywidget.cpp  dictionarywidget.h  dictionarywidget.qrc  dictionarywidget.ui  dictionarywriter.cpp  dictionarywriter.h  editwidget.cpp  editwidget.h  editwidget.qrc  editwidget.ui  entry.cpp  entry.h  kvtmlreader.cpp  kvtmlreader.h  lineedit.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  newdialog.cpp  (+21 more)
src/resources/: dictionarywidget.qrc  mainwindow.qrc
src/translations/: qdictionary_hu.ts
src/ui/: dictionarywidget.ui  mainwindow.ui
