PROJECT(QDictionary)

SET(QDICTIONARY_VERSION_MAJOR 0)
SET(QDICTIONARY_VERSION_MINOR 1)
SET(QDICTIONARY_VERSION_PATCH 0)
SET(QDICTIONARY_VERSION ${QDICTIONARY_VERSION_MAJOR}.${QDICTIONARY_VERSION_MINOR}.${QDICTIONARY_VERSION_PATCH})
SET(QDICTIONARY_VERSION_STRING "${QDICTIONARY_VERSION}")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)

ADD_SUBDIRECTORY(src)
